# research_paper_agent

./: .env.example  .gitignore  README.md  plan_doc.md  plan_doc_v2.md  pyproject.toml  requirements.txt
src/article_generator/: __init__.py  config.py  llm_client.py  main.py  models.py
src/article_generator/agents/: architecture_agent.py  base.py  contributions_agent.py  experimentation_agent.py  literature_review_agent.py  math_agent.py  requirement_agent.py  writing_agents.py
src/article_generator/context/: memory.py  token_budget.py
src/article_generator/discovery/: __init__.py  discovery_agent.py
src/article_generator/ingestion/: __init__.py  pipeline.py
src/article_generator/knowledge/: __init__.py  knowledge_graph.py  vector_store.py
src/article_generator/orchestrator/: __init__.py  pipeline.py
src/article_generator/output/: __init__.py  latex_gen.py
src/article_generator/quality/: __init__.py  humanizer.py  novelty.py  verification.py
src/article_generator/retrieval/: __init__.py  orchestrator.py
