[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "article-generator"
version = "0.1.0"
description = "Enterprise-grade AI research paper generator with multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "qdrant-client>=1.7.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "tiktoken>=0.5.0",
    "diskcache>=5.6.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.9.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
parsing = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
article-gen = "article_generator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
